# coraline-plugin-ble-central

./: CMakeLists.txt  README.md
blecentral/: CMakeLists.txt  bleplugin.cpp  loader.cpp
include/: blecentral.h  bleplugin.h  bleplugin_global.h  loader.h
shared/: CMakeLists.txt
shared/BLE/: ble.js  init.js
